exports[`no-useless-template-literals > invalid(1): const string = \`\${value}\`; 1`] = `

  1 | const string = \`\${value}\`;

`;

exports[`no-useless-template-literals > invalid(1): const string = \`\${value}\`; 2`] = `

Message:
> 1 | const string = \`\${value}\`;
    |                ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(value)\` instead.:
  1 | const string = String(value);

`;

exports[`no-useless-template-literals > invalid(10): const string = \`\${-0}\`; 1`] = `

  1 | const string = \`\${-0}\`;

`;

exports[`no-useless-template-literals > invalid(10): const string = \`\${-0}\`; 2`] = `

Message:
> 1 | const string = \`\${-0}\`;
    |                ^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = '0';

`;

exports[`no-useless-template-literals > invalid(11): const string = \`\${-123n}\`; 1`] = `

  1 | const string = \`\${-123n}\`;

`;

exports[`no-useless-template-literals > invalid(11): const string = \`\${-123n}\`; 2`] = `

Message:
> 1 | const string = \`\${-123n}\`;
    |                ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = '-123';

`;

exports[`no-useless-template-literals > invalid(12): const string = \`\${\"value\"}\`; 1`] = `

  1 | const string = \`\${"value"}\`;

`;

exports[`no-useless-template-literals > invalid(12): const string = \`\${\"value\"}\`; 2`] = `

Message:
> 1 | const string = \`\${"value"}\`;
    |                ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = 'value';

`;

exports[`no-useless-template-literals > invalid(13): const string = \`\${'value'}\`; 1`] = `

  1 | const string = \`\${'value'}\`;

`;

exports[`no-useless-template-literals > invalid(13): const string = \`\${'value'}\`; 2`] = `

Message:
> 1 | const string = \`\${'value'}\`;
    |                ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = 'value';

`;

exports[`no-useless-template-literals > invalid(14): const string = \`\${\`value\`}\`; 1`] = `

  1 | const string = \`\${\`value\`}\`;

`;

exports[`no-useless-template-literals > invalid(14): const string = \`\${\`value\`}\`; 2`] = `

Message:
> 1 | const string = \`\${\`value\`}\`;
    |                ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = 'value';

`;

exports[`no-useless-template-literals > invalid(15): const string = \`\${123}\`; 1`] = `

  1 | const string = \`\${123}\`;

`;

exports[`no-useless-template-literals > invalid(15): const string = \`\${123}\`; 2`] = `

Message:
> 1 | const string = \`\${123}\`;
    |                ^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = '123';

`;

exports[`no-useless-template-literals > invalid(16): const string = \`\${123n}\`; 1`] = `

  1 | const string = \`\${123n}\`;

`;

exports[`no-useless-template-literals > invalid(16): const string = \`\${123n}\`; 2`] = `

Message:
> 1 | const string = \`\${123n}\`;
    |                ^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = '123';

`;

exports[`no-useless-template-literals > invalid(17): const string = \`\${true}\`; 1`] = `

  1 | const string = \`\${true}\`;

`;

exports[`no-useless-template-literals > invalid(17): const string = \`\${true}\`; 2`] = `

Message:
> 1 | const string = \`\${true}\`;
    |                ^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = 'true';

`;

exports[`no-useless-template-literals > invalid(18): const string = \`\${false}\`; 1`] = `

  1 | const string = \`\${false}\`;

`;

exports[`no-useless-template-literals > invalid(18): const string = \`\${false}\`; 2`] = `

Message:
> 1 | const string = \`\${false}\`;
    |                ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = 'false';

`;

exports[`no-useless-template-literals > invalid(19): const string = \`\${null}\`; 1`] = `

  1 | const string = \`\${null}\`;

`;

exports[`no-useless-template-literals > invalid(19): const string = \`\${null}\`; 2`] = `

Message:
> 1 | const string = \`\${null}\`;
    |                ^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = 'null';

`;

exports[`no-useless-template-literals > invalid(2): const string = \`\${object.property}\`; 1`] = `

  1 | const string = \`\${object.property}\`;

`;

exports[`no-useless-template-literals > invalid(2): const string = \`\${object.property}\`; 2`] = `

Message:
> 1 | const string = \`\${object.property}\`;
    |                ^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(object.property)\` instead.:
  1 | const string = String(object.property);

`;

exports[`no-useless-template-literals > invalid(20): const string = \`\${\"value\"}\` as const; 1`] = `

Filename: file.ts

  1 | const string = \`\${"value"}\` as const;

`;

exports[`no-useless-template-literals > invalid(20): const string = \`\${\"value\"}\` as const; 2`] = `

Message:
> 1 | const string = \`\${"value"}\` as const;
    |                ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = 'value' as const;

`;

exports[`no-useless-template-literals > invalid(21): const string = <const>\`\${\"value\"}\`; 1`] = `

Filename: file.ts

  1 | const string = <const>\`\${"value"}\`;

`;

exports[`no-useless-template-literals > invalid(21): const string = <const>\`\${\"value\"}\`; 2`] = `

Message:
> 1 | const string = <const>\`\${"value"}\`;
    |                       ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = <const>'value';

`;

exports[`no-useless-template-literals > invalid(22): const value = getValue(); const string = \`\${value}\`; 1`] = `

Filename: file.js

  1 | const value = getValue(); const string = \`\${value}\`;

`;

exports[`no-useless-template-literals > invalid(22): const value = getValue(); const string = \`\${value}\`; 2`] = `

Message:
> 1 | const value = getValue(); const string = \`\${value}\`;
    |                                          ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(value)\` instead.:
  1 | const value = getValue(); const string = String(value);

`;

exports[`no-useless-template-literals > invalid(23): declare const value: string; const string = \`\${value}\` as string; 1`] = `

Filename: file.ts

  1 | declare const value: string; const string = \`\${value}\` as string;

`;

exports[`no-useless-template-literals > invalid(23): declare const value: string; const string = \`\${value}\` as string; 2`] = `

Message:
> 1 | declare const value: string; const string = \`\${value}\` as string;
    |                                             ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(value)\` instead.:
  1 | declare const value: string; const string = String(value) as string;

`;

exports[`no-useless-template-literals > invalid(24): declare const value: string; const string = <string>\`\${value}\`; 1`] = `

Filename: file.ts

  1 | declare const value: string; const string = <string>\`\${value}\`;

`;

exports[`no-useless-template-literals > invalid(24): declare const value: string; const string = <string>\`\${value}\`; 2`] = `

Message:
> 1 | declare const value: string; const string = <string>\`\${value}\`;
    |                                                     ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(value)\` instead.:
  1 | declare const value: string; const string = <string>String(value);

`;

exports[`no-useless-template-literals > invalid(25): declare const value: string; const string = \`\${value}\` satisfies string; 1`] = `

Filename: file.ts

  1 | declare const value: string; const string = \`\${value}\` satisfies string;

`;

exports[`no-useless-template-literals > invalid(25): declare const value: string; const string = \`\${value}\` satisfies string; 2`] = `

Message:
> 1 | declare const value: string; const string = \`\${value}\` satisfies string;
    |                                             ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(value)\` instead.:
  1 | declare const value: string; const string = String(value) satisfies string;

`;

exports[`no-useless-template-literals > invalid(26): declare const value: string; const string = \`\${value}\`; 1`] = `

Filename: file.ts

  1 | declare const value: string; const string = \`\${value}\`;

`;

exports[`no-useless-template-literals > invalid(26): declare const value: string; const string = \`\${value}\`; 2`] = `

Message:
> 1 | declare const value: string; const string = \`\${value}\`;
    |                                             ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(value)\` instead.:
  1 | declare const value: string; const string = String(value);

`;

exports[`no-useless-template-literals > invalid(27): declare function someFunctionCall(options: {someParam: string}): void;\nconst someCondition = Math.random() > 0.5;\nsomeFunctionCall({someParam: \`\${someCondition ? 1 : 0}\`}); 1`] = `

Filename: file.ts

  1 | declare function someFunctionCall(options: {someParam: string}): void;
  2 | const someCondition = Math.random() > 0.5;
  3 | someFunctionCall({someParam: \`\${someCondition ? 1 : 0}\`});

`;

exports[`no-useless-template-literals > invalid(27): declare function someFunctionCall(options: {someParam: string}): void;\nconst someCondition = Math.random() > 0.5;\nsomeFunctionCall({someParam: \`\${someCondition ? 1 : 0}\`}); 2`] = `

Message:
  1 | declare function someFunctionCall(options: {someParam: string}): void;
  2 | const someCondition = Math.random() > 0.5;
> 3 | someFunctionCall({someParam: \`\${someCondition ? 1 : 0}\`});
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(someCondition ? 1 : 0)\` instead.:
  1 | declare function someFunctionCall(options: {someParam: string}): void;
  2 | const someCondition = Math.random() > 0.5;
  3 | someFunctionCall({someParam: String(someCondition ? 1 : 0)});

`;

exports[`no-useless-template-literals > invalid(28): const string = \`\${\"hello\"}\${\"world\"}\`; 1`] = `

  1 | const string = \`\${"hello"}\${"world"}\`;

`;

exports[`no-useless-template-literals > invalid(28): const string = \`\${\"hello\"}\${\"world\"}\`; 2`] = `

Message:
> 1 | const string = \`\${"hello"}\${"world"}\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = 'helloworld';

`;

exports[`no-useless-template-literals > invalid(29): const string = \`before\${\"middle\"}after\`; 1`] = `

  1 | const string = \`before\${"middle"}after\`;

`;

exports[`no-useless-template-literals > invalid(29): const string = \`before\${\"middle\"}after\`; 2`] = `

Message:
> 1 | const string = \`before\${"middle"}after\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`beforemiddleafter\`;

`;

exports[`no-useless-template-literals > invalid(3): const string = \`\${chalk.bold(\"Hello\")}\`; 1`] = `

  1 | const string = \`\${chalk.bold("Hello")}\`;

`;

exports[`no-useless-template-literals > invalid(3): const string = \`\${chalk.bold(\"Hello\")}\`; 2`] = `

Message:
> 1 | const string = \`\${chalk.bold("Hello")}\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(chalk.bold("Hello"))\` instead.:
  1 | const string = String(chalk.bold("Hello"));

`;

exports[`no-useless-template-literals > invalid(30): const string = \`before\${\"middle\"}\${value}after\`; 1`] = `

  1 | const string = \`before\${"middle"}\${value}after\`;

`;

exports[`no-useless-template-literals > invalid(30): const string = \`before\${\"middle\"}\${value}after\`; 2`] = `

Message:
> 1 | const string = \`before\${"middle"}\${value}after\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`beforemiddle\${value}after\`;

`;

exports[`no-useless-template-literals > invalid(31): const string = \`before\${value}\${\"middle\"}after\`; 1`] = `

  1 | const string = \`before\${value}\${"middle"}after\`;

`;

exports[`no-useless-template-literals > invalid(31): const string = \`before\${value}\${\"middle\"}after\`; 2`] = `

Message:
> 1 | const string = \`before\${value}\${"middle"}after\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`before\${value}middleafter\`;

`;

exports[`no-useless-template-literals > invalid(32): const string = \`before\${\"middle\"}\${value}\${\"tail\"}after\`; 1`] = `

  1 | const string = \`before\${"middle"}\${value}\${"tail"}after\`;

`;

exports[`no-useless-template-literals > invalid(32): const string = \`before\${\"middle\"}\${value}\${\"tail\"}after\`; 2`] = `

Message:
> 1 | const string = \`before\${"middle"}\${value}\${"tail"}after\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`beforemiddle\${value}tailafter\`;

`;

exports[`no-useless-template-literals > invalid(33): const string = \`before\${123}\${value}\${true}after\`; 1`] = `

  1 | const string = \`before\${123}\${value}\${true}after\`;

`;

exports[`no-useless-template-literals > invalid(33): const string = \`before\${123}\${value}\${true}after\`; 2`] = `

Message:
> 1 | const string = \`before\${123}\${value}\${true}after\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`before123\${value}trueafter\`;

`;

exports[`no-useless-template-literals > invalid(34): const string = \`\${\"before\"}\${value}\${\"after\"}\`; 1`] = `

  1 | const string = \`\${"before"}\${value}\${"after"}\`;

`;

exports[`no-useless-template-literals > invalid(34): const string = \`\${\"before\"}\${value}\${\"after\"}\`; 2`] = `

Message:
> 1 | const string = \`\${"before"}\${value}\${"after"}\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`before\${value}after\`;

`;

exports[`no-useless-template-literals > invalid(35): const string = \`\${\"\\\\n\"}\${value}\`; 1`] = `

  1 | const string = \`\${"\\\\n"}\${value}\`;

`;

exports[`no-useless-template-literals > invalid(35): const string = \`\${\"\\\\n\"}\${value}\`; 2`] = `

Message:
> 1 | const string = \`\${"\\\\n"}\${value}\`;
    |                ^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\\\n\${value}\`;

`;

exports[`no-useless-template-literals > invalid(36): const string = \`\${\"\`\"}\${value}\`; 1`] = `

  1 | const string = \`\${"\`"}\${value}\`;

`;

exports[`no-useless-template-literals > invalid(36): const string = \`\${\"\`\"}\${value}\`; 2`] = `

Message:
> 1 | const string = \`\${"\`"}\${value}\`;
    |                ^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\\`\${value}\`;

`;

exports[`no-useless-template-literals > invalid(37): const string = \`\${\"\${\"}\${value}\`; 1`] = `

  1 | const string = \`\${"\${"}\${value}\`;

`;

exports[`no-useless-template-literals > invalid(37): const string = \`\${\"\${\"}\${value}\`; 2`] = `

Message:
> 1 | const string = \`\${"\${"}\${value}\`;
    |                ^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\\${\${value}\`;

`;

exports[`no-useless-template-literals > invalid(38): const string = \`\${\"$\"}{value}\`; 1`] = `

  1 | const string = \`\${"$"}{value}\`;

`;

exports[`no-useless-template-literals > invalid(38): const string = \`\${\"$\"}{value}\`; 2`] = `

Message:
> 1 | const string = \`\${"$"}{value}\`;
    |                ^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\\${value}\`;

`;

exports[`no-useless-template-literals > invalid(39): const string = \`\${\`$\`}{value}\`; 1`] = `

  1 | const string = \`\${\`$\`}{value}\`;

`;

exports[`no-useless-template-literals > invalid(39): const string = \`\${\`$\`}{value}\`; 2`] = `

Message:
> 1 | const string = \`\${\`$\`}{value}\`;
    |                ^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\\${value}\`;

`;

exports[`no-useless-template-literals > invalid(4): const string = \`\${foo, bar}\`; 1`] = `

  1 | const string = \`\${foo, bar}\`;

`;

exports[`no-useless-template-literals > invalid(4): const string = \`\${foo, bar}\`; 2`] = `

Message:
> 1 | const string = \`\${foo, bar}\`;
    |                ^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String((foo, bar))\` instead.:
  1 | const string = String((foo, bar));

`;

exports[`no-useless-template-literals > invalid(40): const string = \`\${\"\\\\\"}\${value}\`; 1`] = `

  1 | const string = \`\${"\\\\"}\${value}\`;

`;

exports[`no-useless-template-literals > invalid(40): const string = \`\${\"\\\\\"}\${value}\`; 2`] = `

Message:
> 1 | const string = \`\${"\\\\"}\${value}\`;
    |                ^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\\\\${value}\`;

`;

exports[`no-useless-template-literals > invalid(41): const string = \`\\0\${\"1\"}\${value}\`; 1`] = `

  1 | const string = \`\\0\${"1"}\${value}\`;

`;

exports[`no-useless-template-literals > invalid(41): const string = \`\\0\${\"1\"}\${value}\`; 2`] = `

Message:
> 1 | const string = \`\\0\${"1"}\${value}\`;
    |                ^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(42): const string = \`before\${/* keep */ value}\${\"middle\"}after\`; 1`] = `

  1 | const string = \`before\${/* keep */ value}\${"middle"}after\`;

`;

exports[`no-useless-template-literals > invalid(42): const string = \`before\${/* keep */ value}\${\"middle\"}after\`; 2`] = `

Message:
> 1 | const string = \`before\${/* keep */ value}\${"middle"}after\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`before\${/* keep */ value}middleafter\`;

`;

exports[`no-useless-template-literals > invalid(43): const string = \`\${\"\\1\"}\${value}\`; 1`] = `

  1 | const string = \`\${"\\1"}\${value}\`;

`;

exports[`no-useless-template-literals > invalid(43): const string = \`\${\"\\1\"}\${value}\`; 2`] = `

Message:
> 1 | const string = \`\${"\\1"}\${value}\`;
    |                ^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(44): \`\${\"use strict\"}\`; with (object) { property; } 1`] = `

  1 | \`\${"use strict"}\`; with (object) { property; }

`;

exports[`no-useless-template-literals > invalid(44): \`\${\"use strict\"}\`; with (object) { property; } 2`] = `

Message:
> 1 | \`\${"use strict"}\`; with (object) { property; }
    | ^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(45): \`\${\"use \"}\${\"strict\"}\`; with (object) { property; } 1`] = `

  1 | \`\${"use "}\${"strict"}\`; with (object) { property; }

`;

exports[`no-useless-template-literals > invalid(45): \`\${\"use \"}\${\"strict\"}\`; with (object) { property; } 2`] = `

Message:
> 1 | \`\${"use "}\${"strict"}\`; with (object) { property; }
    | ^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(46): function foo() { \`\${\"use strict\"}\`; with (object) { property; } } 1`] = `

  1 | function foo() { \`\${"use strict"}\`; with (object) { property; } }

`;

exports[`no-useless-template-literals > invalid(46): function foo() { \`\${\"use strict\"}\`; with (object) { property; } } 2`] = `

Message:
> 1 | function foo() { \`\${"use strict"}\`; with (object) { property; } }
    |                  ^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(47): \`before\${\"middle\"}after\`; with (object) { property; } 1`] = `

  1 | \`before\${"middle"}after\`; with (object) { property; }

`;

exports[`no-useless-template-literals > invalid(47): \`before\${\"middle\"}after\`; with (object) { property; } 2`] = `

Message:
> 1 | \`before\${"middle"}after\`; with (object) { property; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | \`beforemiddleafter\`; with (object) { property; }

`;

exports[`no-useless-template-literals > invalid(48): function foo() { \`before\${\"middle\"}after\`; with (object) { property; } } 1`] = `

  1 | function foo() { \`before\${"middle"}after\`; with (object) { property; } }

`;

exports[`no-useless-template-literals > invalid(48): function foo() { \`before\${\"middle\"}after\`; with (object) { property; } } 2`] = `

Message:
> 1 | function foo() { \`before\${"middle"}after\`; with (object) { property; } }
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | function foo() { \`beforemiddleafter\`; with (object) { property; } }

`;

exports[`no-useless-template-literals > invalid(49): const string = \`\${\n\t/* comment */\n\t\"value\"\n}\`; 1`] = `

  1 | const string = \`\${
  2 | 	/* comment */
  3 | 	"value"
  4 | }\`;

`;

exports[`no-useless-template-literals > invalid(49): const string = \`\${\n\t/* comment */\n\t\"value\"\n}\`; 2`] = `

Message:
> 1 | const string = \`\${
    |                ^^^
> 2 | 	/* comment */
    | ^^^^^^^^^^^^^^
> 3 | 	"value"
    | ^^^^^^^^
> 4 | }\`;
    | ^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(5): const string = \`\${/regexp/}\`; 1`] = `

  1 | const string = \`\${/regexp/}\`;

`;

exports[`no-useless-template-literals > invalid(5): const string = \`\${/regexp/}\`; 2`] = `

Message:
> 1 | const string = \`\${/regexp/}\`;
    |                ^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(/regexp/)\` instead.:
  1 | const string = String(/regexp/);

`;

exports[`no-useless-template-literals > invalid(50): const string = \`before\${\n\t/* comment */\n\t\"middle\"\n}after\`; 1`] = `

  1 | const string = \`before\${
  2 | 	/* comment */
  3 | 	"middle"
  4 | }after\`;

`;

exports[`no-useless-template-literals > invalid(50): const string = \`before\${\n\t/* comment */\n\t\"middle\"\n}after\`; 2`] = `

Message:
> 1 | const string = \`before\${
    |                ^^^^^^^^^
> 2 | 	/* comment */
    | ^^^^^^^^^^^^^^
> 3 | 	"middle"
    | ^^^^^^^^^
> 4 | }after\`;
    | ^^^^^^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(51): const string = \`\\u{41}\${1}\`; 1`] = `

  1 | const string = \`\\u{41}\${1}\`;

`;

exports[`no-useless-template-literals > invalid(51): const string = \`\\u{41}\${1}\`; 2`] = `

Message:
> 1 | const string = \`\\u{41}\${1}\`;
    |                ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\u{41}1\`;

`;

exports[`no-useless-template-literals > invalid(52): const string = \`\\u{41}\${\"b\"}\`; 1`] = `

  1 | const string = \`\\u{41}\${"b"}\`;

`;

exports[`no-useless-template-literals > invalid(52): const string = \`\\u{41}\${\"b\"}\`; 2`] = `

Message:
> 1 | const string = \`\\u{41}\${"b"}\`;
    |                ^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\u{41}b\`;

`;

exports[`no-useless-template-literals > invalid(53): const string = \`\\u{1F600}\${1}\`; 1`] = `

  1 | const string = \`\\u{1F600}\${1}\`;

`;

exports[`no-useless-template-literals > invalid(53): const string = \`\\u{1F600}\${1}\`; 2`] = `

Message:
> 1 | const string = \`\\u{1F600}\${1}\`;
    |                ^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\u{1F600}1\`;

`;

exports[`no-useless-template-literals > invalid(54): const string = \`before\\u{41}\${1}after\`; 1`] = `

  1 | const string = \`before\\u{41}\${1}after\`;

`;

exports[`no-useless-template-literals > invalid(54): const string = \`before\\u{41}\${1}after\`; 2`] = `

Message:
> 1 | const string = \`before\\u{41}\${1}after\`;
    |                ^^^^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`before\\u{41}1after\`;

`;

exports[`no-useless-template-literals > invalid(55): const string = \`\\u{41}\${1}\${value}\`; 1`] = `

  1 | const string = \`\\u{41}\${1}\${value}\`;

`;

exports[`no-useless-template-literals > invalid(55): const string = \`\\u{41}\${1}\${value}\`; 2`] = `

Message:
> 1 | const string = \`\\u{41}\${1}\${value}\`;
    |                ^^^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\u{41}1\${value}\`;

`;

exports[`no-useless-template-literals > invalid(56): const string = \`\${-value}\`; 1`] = `

  1 | const string = \`\${-value}\`;

`;

exports[`no-useless-template-literals > invalid(56): const string = \`\${-value}\`; 2`] = `

Message:
> 1 | const string = \`\${-value}\`;
    |                ^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(-value)\` instead.:
  1 | const string = String(-value);

`;

exports[`no-useless-template-literals > invalid(57): const string = \`a\${\"{b\"}\`; 1`] = `

  1 | const string = \`a\${"{b"}\`;

`;

exports[`no-useless-template-literals > invalid(57): const string = \`a\${\"{b\"}\`; 2`] = `

Message:
> 1 | const string = \`a\${"{b"}\`;
    |                ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`a{b\`;

`;

exports[`no-useless-template-literals > invalid(58): const string = \`\\\\$\${\"{b\"}\`; 1`] = `

  1 | const string = \`\\\\$\${"{b"}\`;

`;

exports[`no-useless-template-literals > invalid(58): const string = \`\\\\$\${\"{b\"}\`; 2`] = `

Message:
> 1 | const string = \`\\\\$\${"{b"}\`;
    |                ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\\\\\\${b\`;

`;

exports[`no-useless-template-literals > invalid(59): const string = \`\\$\${\"{b\"}\`; 1`] = `

  1 | const string = \`\\$\${"{b"}\`;

`;

exports[`no-useless-template-literals > invalid(59): const string = \`\\$\${\"{b\"}\`; 2`] = `

Message:
> 1 | const string = \`\\$\${"{b"}\`;
    |                ^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = \`\\\${b\`;

`;

exports[`no-useless-template-literals > invalid(6): const symbol = Symbol(\"x\"); const string = \`\${symbol}\`; 1`] = `

  1 | const symbol = Symbol("x"); const string = \`\${symbol}\`;

`;

exports[`no-useless-template-literals > invalid(6): const symbol = Symbol(\"x\"); const string = \`\${symbol}\`; 2`] = `

Message:
> 1 | const symbol = Symbol("x"); const string = \`\${symbol}\`;
    |                                            ^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(symbol)\` instead.:
  1 | const symbol = Symbol("x"); const string = String(symbol);

`;

exports[`no-useless-template-literals > invalid(60): const string = \`\${\"\\0\"}1\${value}\`; 1`] = `

  1 | const string = \`\${"\\0"}1\${value}\`;

`;

exports[`no-useless-template-literals > invalid(60): const string = \`\${\"\\0\"}1\${value}\`; 2`] = `

Message:
> 1 | const string = \`\${"\\0"}1\${value}\`;
    |                ^^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(61): if (condition) \`\${\"use strict\"}\`; 1`] = `

  1 | if (condition) \`\${"use strict"}\`;

`;

exports[`no-useless-template-literals > invalid(61): if (condition) \`\${\"use strict\"}\`; 2`] = `

Message:
> 1 | if (condition) \`\${"use strict"}\`;
    |                ^^^^^^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | if (condition) 'use strict';

`;

exports[`no-useless-template-literals > invalid(62): \"use strict\"; \`\${\"value\"}\`; 1`] = `

  1 | "use strict"; \`\${"value"}\`;

`;

exports[`no-useless-template-literals > invalid(62): \"use strict\"; \`\${\"value\"}\`; 2`] = `

Message:
> 1 | "use strict"; \`\${"value"}\`;
    |               ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

`;

exports[`no-useless-template-literals > invalid(63): foo(); \`\${\"value\"}\`; 1`] = `

  1 | foo(); \`\${"value"}\`;

`;

exports[`no-useless-template-literals > invalid(63): foo(); \`\${\"value\"}\`; 2`] = `

Message:
> 1 | foo(); \`\${"value"}\`;
    |        ^^^^^^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | foo(); 'value';

`;

exports[`no-useless-template-literals > invalid(7): function String(value) { return value; } const string = \`\${value}\`; 1`] = `

  1 | function String(value) { return value; } const string = \`\${value}\`;

`;

exports[`no-useless-template-literals > invalid(7): function String(value) { return value; } const string = \`\${value}\`; 2`] = `

Message:
> 1 | function String(value) { return value; } const string = \`\${value}\`;
    |                                                         ^^^^^^^^^^ Do not use unnecessary template literal expressions.

Suggestion 1/1: Use \`String(value)\` instead.:
  1 | function String(value) { return value; } const string = String(value);

`;

exports[`no-useless-template-literals > invalid(8): const string = \`\${-1}\`; 1`] = `

  1 | const string = \`\${-1}\`;

`;

exports[`no-useless-template-literals > invalid(8): const string = \`\${-1}\`; 2`] = `

Message:
> 1 | const string = \`\${-1}\`;
    |                ^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = '-1';

`;

exports[`no-useless-template-literals > invalid(9): const string = \`\${+1}\`; 1`] = `

  1 | const string = \`\${+1}\`;

`;

exports[`no-useless-template-literals > invalid(9): const string = \`\${+1}\`; 2`] = `

Message:
> 1 | const string = \`\${+1}\`;
    |                ^^^^^^^ Do not use unnecessary template literal expressions.

Output:
  1 | const string = '1';

`;
